[Compiler V2] Derive abstract domain (#11674)
Implements a procedural macro to automatically derive AbstractDomain for structs. The derived join method joins selected fields of a struct, or all fields for structs with anonymous fields, and returns the combined join results. The joined fields must implement AbstractDomain.

Refactors several trivial existing implementations of AbstractDomain using this derive macro.

GitOrigin-RevId: 629539e032de52c209086766133e0d02b286da99

--- a/language/move-compiler-v2/Cargo.toml
+++ b/language/move-compiler-v2/Cargo.toml
@@ -10,6 +10,7 @@ publish = false
 edition = "2021"
 
 [dependencies]
+abstract-domain-derive = { path = "../move-model/bytecode/abstract_domain_derive" }
 anyhow = "1.0.62"
 move-binary-format = { path = "../move-binary-format" }
 move-bytecode-source-map = { path = "../move-ir-compiler/move-bytecode-source-map" }
