--- a/language/move-compiler-v2/Cargo.toml
+++ b/language/move-compiler-v2/Cargo.toml
@@ -28,9 +28,10 @@ clap = { version = "4.3.9", features = ["derive", "env"] }
 codespan = "0.11.1"
 codespan-reporting = { version = "0.11.1", features = ["serde", "serialization"] }
 ethnum = "1.0.4"
+flexi_logger = "0.27.4"
 im = "15.0.0"
 itertools = "0.10.0"
-#log = "0.4.14"
+log = { version = "0.4.14", features = ["serde"] }
 num = "0.4.0"
 once_cell = "1.7.2"
 #paste = "1.0.5"
@@ -45,9 +46,6 @@ move-disassembler = { path = "../tools/move-disassembler" }
 move-ir-types = { path = "../move-ir/types" }
 move-prover-test-utils = { path = "../move-prover/test-utils" }
 move-stdlib = { path = "../move-stdlib" }
-
-[features]
-verbose-debug-print = ["move-stackless-bytecode/verbose-debug-print"]
 
 [lib]
 doctest = false
