--- a/language/move-compiler-v2/transactional-tests/Cargo.toml
+++ b/language/move-compiler-v2/transactional-tests/Cargo.toml
@@ -12,6 +12,7 @@ once_cell = "1.7.2"
 
 [dev-dependencies]
 datatest-stable = "0.1.1"
+move-compiler-v2 = { path = ".." }
 move-transactional-test-runner = { path = "../../testing-infra/transactional-test-runner" }
 
 [[test]]
