[move][aggregator] Native (delayed) value (#11768)
This PR introduces a new native `ValueImpl` which is used to implement aggregator
but can also be extended to hook custom serialization/deserialization logic.

GitOrigin-RevId: b701c7d4524497a4e1005434ba357677728e02ff

--- a/language/move-vm/types/Cargo.toml
+++ b/language/move-vm/types/Cargo.toml
@@ -19,12 +19,14 @@ smallvec = "1.6.1"
 triomphe = "0.1.9"
 
 bcs = { workspace = true }
-move-binary-format = { path = "../../move-binary-format" }
 
+move-binary-format = { path = "../../move-binary-format" }
 move-core-types = { path = "../../move-core/types" }
 
 [dev-dependencies]
+claims = "0.7"
 proptest = "1.0.0"
+rand = "0.8.5"
 
 [features]
 default = []
