--- a/language/move-compiler/Cargo.toml
+++ b/language/move-compiler/Cargo.toml
@@ -32,6 +32,7 @@ move-core-types = { path = "../move-core/types" }
 move-ir-to-bytecode = { path = "../move-ir-compiler/move-ir-to-bytecode" }
 move-ir-types = { path = "../move-ir/types" }
 move-symbol-pool = { path = "../move-symbol-pool" }
+log = "0.4.17"
 
 [dev-dependencies]
 datatest-stable = "0.1.1"
