--- a/language/move-ir-compiler/Cargo.toml
+++ b/language/move-ir-compiler/Cargo.toml
@@ -17,6 +17,7 @@ move-bytecode-source-map = { path = "move-bytecode-source-map" }
 move-bytecode-verifier = { path = "../move-bytecode-verifier" }
 move-command-line-common = { path = "../move-command-line-common" }
 move-ir-to-bytecode = { path = "move-ir-to-bytecode" }
+move-ir-types = { workspace = true }
 serde_json = { workspace = true }
 
 bcs = { workspace = true }
